# autoware_planning_supervisor

./: LICENSE.txt  README.md  package.xml  setup.cfg  setup.py
autoware_planning_supervisor/: planning_conf.py  planning_task.py  supervisor.py  test_lanelet2.py
launch/: planning_simulator.launch.xml
