<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_planning_supervisor</name>
  <version>0.0.1</version>
  <description>A launcher for planning tasks supervised by a prescribed configuration.</description>
  <maintainer email="dsksh@acm.org">Daisuke Ishii</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>visualization_msgs</depend>TODO: Package description

  <exec_depend>autoware_adapi_adaptors</exec_depend>
  <exec_depend>autoware_global_parameter_loader</exec_depend>
  <exec_depend>python3-bson</exec_depend>
  <exec_depend>python3-tornado</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tier4_autoware_api_launch</exec_depend>
  <exec_depend>tier4_control_launch</exec_depend>
  <exec_depend>tier4_localization_launch</exec_depend>
  <exec_depend>tier4_map_launch</exec_depend>
  <exec_depend>tier4_perception_launch</exec_depend>
  <exec_depend>tier4_planning_launch</exec_depend>
  <exec_depend>tier4_sensing_launch</exec_depend>
  <exec_depend>tier4_simulator_launch</exec_depend>
  <exec_depend>tier4_system_launch</exec_depend>
  <exec_depend>tier4_vehicle_launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
